--- a/journal/202012.md
+++ b/journal/202012.md
@@ -178,7 +178,9 @@ Hashrate: December's [hashrate](https://explorer.dcrdata.org/charts?chart=hashra
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Staking: [30-day average](https://dcrstats.com/) ticket price was {n.d, try to snapshot it on 1st} DCR (+{n.d}). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=t1-t2&bin=window&axis=time&visibility=true-false&mode=stepped) {set zoom to show the month} varied between {n.d}-{n.d} DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=t1-t2&scale=linear&bin=block&axis=time) was {n.dd}-{n.dd} million DCR, which corresponded to {n.d}-{n.d}% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=t1-t2&scale=linear&bin=block&axis=time) in PoS.
+Staking: [30-day average](https://dcrstats.com/) ticket price was 163.91 DCR (+5.25). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=ki3dsm8e-kjedxmdt&scale=linear&bin=window&axis=time&visibility=true-false) varied between 150.6-190.9 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=ki3is02w-kjej41eu&scale=linear&bin=block&axis=time&visibility=true-false) was 6.42-6.68 million DCR, which corresponded to 52.01-54.20% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=ki3is02w-kjej41eu&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
+
+Another month another ATH record broken.Ticket price ATH of 190.9 DCR and 54.20% stake participation . 
 
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
@@ -192,8 +194,7 @@ Transactions: In December, Decred users made {n} regular transactions and bought
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
-Nodes: Throughout [December](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1606780800000&to=1609459200000) there was an average of {} public listening nodes and {} total nodes per dcr.farm. Version distribution: {vx.y.z: n% (+n%), ...}.
-
+Nodes: Throughout [December](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1606780800000&to=1609459200000) there was an average of 87 public listening nodes and 200 total nodes per dcr.farm. Average version distribution for December: 27% dcrd v1.5.2, 16% dcrd v1.5.1, 5% dcrd v1.5.0, 3% dcrd v1.5 dev and RC builds, 2.6% dcrd v1.6 dev builds, 0.7% dcrd v1.4, 10% dcrwallet v1.5.1, 1% dcrwallet v1.5, 0.7% dcrwallet v1.4, 34% others.
 { any interesting analysis or events in the network }
 
 ## Integrations
