--- a/journal/202012.md
+++ b/journal/202012.md
@@ -296,9 +296,9 @@ Selected Twitter discussions:
 
 ## Markets
 
-In December DCR was trading between USD {n.dd}-{n.dd} / BTC {n.ddddd}-{n.ddddd}. The average daily rate was ${n.dd}.
+In December DCR was trading between USD 24.01-41.59 / BTC 0.0012-0.002. The average daily rate was $31.07.
 
-{ markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
+With the massive bitcoin runup, Decred has also been raising in USD without losing much ground in BTC value.
 
 { dcrdex updates, esp. volume }
 
