add defi hack news

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -309,6 +309,14 @@ With the massive bitcoin runup, Decred has also been raising in USD without losi
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
 
+The Cover Protocol, which "allows DeFi users to be protected against smart contract risk", was [hacked](https://www.coindesk.com/cover-protocol-plans-new-token-after-attack) and the attacker minted 40 quintillion COVER tokens, liquidating these for $4 million, but later returning the funds to the smart contract. The team are now looking at creating a new version of the COVER token with a snapshot to refund COVER holders, because otherwise those extra 40 quintillion tokens would mess up the tokenomics.
+
+Nexus Mutual's CEO was hacked for $.8.3 million when an attacker tricked him into signing a transaction that sent all his NXM to the attacker's wallet. The attacker [laundered](https://coingeek.com/nexus-mutual-attacker-cashes-out-3-million/) $2.7 million to BTC, and this sent the NXM price lower, they then sent a message on the Ethereum blockchain offering to return the rest (so NXM could avoid further pain) for a [ransom](https://coingeek.com/nexus-mutual-attacker-wants-3-million-in-ransom-money/) of $2.8 million in ETH. 
+
+December's top DeFi rug pull was [Compounder finance](https://www.coindesk.com/compounder-developers-implicated-alleged-smart-contract-rug-pull), whose devs absconded with $10.8 million of investor funds after utilizing a hidden backdoor in the contracts.
+
+December's top flash loan attack victim was [Warp Finance](https://decrypt.co/52125/warp-finance-recovers-5-8-million-days-after-hack), with the exploit weighing in at $7.7 million, but $5.85 million is being returned to holders. This is arguably December's top DeFi hack refund too, but COVER is a contender for that title because although the dollar amount being returned was smaller, it represented a ridiculous proportion of the COVER supply.
+
 { governance, funding, chain forks, community splits }
 
 { DEX }
