--- a/journal/202012.md
+++ b/journal/202012.md
@@ -339,7 +339,7 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 
 Credits (alphabetical order):
 
-- writing and editing: {}
+- writing and editing: bee, degeri, l1ndseymm, richardred
 - reviews and feedback: {}
 - title image: {}
 - funding: Decred Treasury
