Dev update from lukebp

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -55,12 +55,16 @@ In progress:
 
 **[Politeia](https://github.com/decred/politeia)**
 
-- removed [CSRF](https://github.com/decred/politeia/pull/1356) on public routes to prevent the possibility to link trickled votes by the CSRF token { how bad was the privacy impact before the fix? }
+- removed [CSRF](https://github.com/decred/politeia/pull/1356) on public routes to prevent the possibility to link trickled votes by the CSRF token. The privacy impact was minimal: linking CSRF tokens to trickled votes would require writing additional code, since it is not done automatically by the CSRF library used.
 - new `politeiavoter` command to [verify](https://github.com/decred/politeia/pull/1355) votes
 - end-to-end UI tests for proposal [editing](https://github.com/decred/politeiagui/pull/2227)
 - removed annoying Logout modal and moved the rarely used "Logout permanently" function to Account tab
 - UX improvements for CMS invoice handling and review
 - Politeia and CMS bug fixes
+
+tlog integration update from @lukebp:
+
+> The ability to retrieve the full timestamp for any piece of user submitted data has been added. Frontend work for this is still ongoing. The backend tlog branch is now feature complete and we'll be starting the code review process.
 
 **[vspd](https://github.com/decred/vspd)**
 
@@ -339,7 +343,7 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, l1ndseymm, richardred
+- writing and editing: bee, degeri, l1ndseymm, lukebp, richardred
 - reviews and feedback: {}
 - title image: {}
 - funding: Decred Treasury
