Dev JoeGruff feedback

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -123,7 +123,7 @@ Note that features added to dcrlibwallet become available for dcrandroid, dcrios
 
 In progress:
 
-- script to [recover](https://github.com/decred/tinydecred/pull/194) funds from an old Copay web wallet's xpriv (extended private key). The script has already helped to recover someone's mainnet funds. { is it a correct description? does "web wallet" refer to the one that was at wallet.decred.org? }
+- script to [recover](https://github.com/decred/tinydecred/pull/194) funds from an old Copay web wallet's xpriv (extended private key). The script has already helped to recover someone's mainnet funds. { does "web wallet" refer to the one that was at wallet.decred.org? }
 
 **[dcrros](https://github.com/decred/dcrros)**
 
@@ -343,6 +343,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, lukebp, richardred
-- reviews and feedback: davecgh
+- reviews and feedback: davecgh, JoeGruff
 - title image: {}
 - funding: Decred Treasury
