--- a/journal/202012.md
+++ b/journal/202012.md
@@ -136,29 +136,30 @@ In progress:
 
 ## People
 
-{ hint: list people who made meaningful commits merged in master branches, in alphabetical order }
-
 Welcome to new first time contributors with code merged to master:  @piotrdelikat ([decrediton](https://github.com/decred/decrediton/commits?author=piotrdelikat)).
 
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS } NA
+Community stats as of Jan 2:
 
-{ welcome new corporate contractors with short intros, if any }
+- Twitter followers: 41,320 (+423)
+- Reddit subscribers: 10,051 (+69)
+- Matrix #general users: 287 (+34)
+- Discord users: 1,723 (+222)
+- Telegram users: 2,338 (-1)
+- YouTube subscribers: 4,300 (+50), views: 165K (+3K)
+- LinkedIn followers: 944 (+12)
+- GitHub dcrd stars: 570 (+3), forks: 247 (+1)
 
-{ updates from existing contractors }
+A few highlights from stats tracked by the [social-media-stats](https://github.com/decredcommunity/social-media-stats) project:
 
-{ interviews about people }
+- [@decredproject](https://twitter.com/decredproject) Twitter broke the magic ["resistance"](https://github.com/decredcommunity/social-media-stats/blob/graphs/graphs/index.md) of 41K followers with an unusual jump by +423
+- [Reddit](https://www.reddit.com/r/decred/) broke 10K subs :tada:
+- [Discord](https://discord.gg/GJ2GXfz) got a nice +14%
+- [DecredTrading](https://t.me/DecredTrading) Telegram got +72% users, to 158 _(God help us)_
+- [@Checkmate](https://twitter.com/_Checkmatey_) got +11% followers (to 3.5K) and made _another_ 1K tweets (~34/day)
+- [DecredES](https://t.me/DecredES) Telegram got +18% (to 245)
+- added [CoinMarketCap](https://coinmarketcap.com/currencies/decred/) Decred watchers, 17.8K as of Jan 2
 
-Community stats as of {date}:
-
-- Politeia users: {} (+{})
-- Twitter followers: {} (+{})
-- Reddit subscribers: {} (+{})
-- Matrix #general users: {} (+{})
-- Discord users: {}, verified to post: {}
-- Telegram users: {} (+{})
-- YouTube subscribers: {} (+{}), views: {} (+{})
-- LinkedIn followers: {} (+{})
-- GitHub dcrd stars: {} (+{}), forks: {} (+{})
+Thanks to Decred ambassadors on all platforms for raising awareness about the project!
 
 ## Governance
 
