--- a/journal/202012.md
+++ b/journal/202012.md
@@ -149,7 +149,7 @@ Community stats as of Jan 2:
 - LinkedIn followers: 944 (+12)
 - GitHub dcrd stars: 570 (+3), forks: 247 (+1)
 
-A few highlights from stats tracked by the [social-media-stats](https://github.com/decredcommunity/social-media-stats) project:
+A few highlights from the stats we [track](https://github.com/decredcommunity/social-media-stats):
 
 - [@decredproject](https://twitter.com/decredproject) Twitter broke the magic ["resistance"](https://github.com/decredcommunity/social-media-stats/blob/graphs/graphs/index.md) of 41K followers with an unusual jump by +423
 - [Reddit](https://www.reddit.com/r/decred/) broke 10K subs :tada:
@@ -167,8 +167,8 @@ In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4Dh
 
 Two proposals were submitted and voted on in December:
 
-* The third [proposal](https://proposals.decred.org/proposals/350f64b) from the Decred ES team requested $14,800 to fund six months work, scaled down from an initial ask of $42,000, with items relating to Talent Land Blockchain Challenge and Codigo Decred being cut. This proposal was rejected with 54.5% Yes votes, having failed to meet the 60% threshold - turnout was 37%.
-* The Decred Hackathons and LATAM Initial Chapter [proposal](https://proposals.decred.org/proposals/5ce1636) submitted after the hackathons element of the LATAM marketing proposal was cut, the people behind it are members of the ES team. The proposal requested a max budget of $17,000 to create materials for hackathons and run two hackathons, with $3,500 of the budget reserved for prizes. The proposal was rejected with 50.2% yes votes and turnout of 36%.
+- The third [proposal](https://proposals.decred.org/proposals/350f64b) from the Decred ES team requested $14,800 to fund six months work, scaled down from an initial ask of $42,000, with items relating to Talent Land Blockchain Challenge and Codigo Decred being cut. This proposal was rejected with 54.5% Yes votes, having failed to meet the 60% threshold - turnout was 37%.
+- The Decred Hackathons and LATAM Initial Chapter [proposal](https://proposals.decred.org/proposals/5ce1636) submitted after the hackathons element of the LATAM marketing proposal was cut, the people behind it are members of the ES team. The proposal requested a max budget of $17,000 to create materials for hackathons and run two hackathons, with $3,500 of the budget reserved for prizes. The proposal was rejected with 50.2% yes votes and turnout of 36%.
 
 While December was a quiet month for proposals, there are already two new ones in January, for renewed funding of [DCRDEX](https://proposals.decred.org/proposals/d462ac3) and [Decred in Depth](https://proposals.decred.org/proposals/391108e) (under new management).
 
