--- a/journal/202012.md
+++ b/journal/202012.md
@@ -181,13 +181,13 @@ Politeia Digest took a break in December but will be back soon.
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: December's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=ki3ivfpm-kjej4ggy&scale=linear&bin=block&axis=time) opened at ~292 Ph/s and closed ~340.9 Ph/s, bottoming at 240.7 Ph/s and peaking at 452 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Jan 1: UUPool 42%, Poolin 34.6%, easy2mine 11.75%, F2Pool 3.87%, Antpool 2.71%, Huobipool 2.56%,   BTC.com 1.27%, Luxor 17%, CoinMine 0.025%.
+Hashrate: December's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=ki3ivfpm-kjej4ggy&scale=linear&bin=block&axis=time) opened at ~292 Ph/s and closed ~340 Ph/s, bottoming at 240 Ph/s and peaking at 452 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Jan 1: UUPool 42%, Poolin 35%, easy2mine 12%, F2Pool 3.9%, Antpool 2.7%, Huobipool 2.6%, BTC.com 1.3%, Luxor 1.2%, CoinMine 0.02%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Staking: [30-day average](https://dcrstats.com/) ticket price was 163.91 DCR (+5.25). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=ki3dsm8e-kjedxmdt&scale=linear&bin=window&axis=time&visibility=true-false) varied between 150.6-190.9 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=ki3is02w-kjej41eu&scale=linear&bin=block&axis=time&visibility=true-false) was 6.42-6.68 million DCR, which corresponded to 52.01-54.20% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=ki3is02w-kjej41eu&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
+Staking: [30-day average](https://dcrstats.com/) ticket price was 163.9 DCR (+5.2). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=ki3ivfpm-kjej4ggy&axis=time&visibility=true-false&mode=stepped) varied between 150.6-190.99 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=ki3ivfpm-kjej4ggy&scale=linear&bin=block&axis=time) was 6.42-6.68 million DCR, which corresponded to 52.01-54.20% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=ki3ivfpm-kjej4ggy&scale=linear&bin=block&axis=time) in PoS.
 
-Another month another ATH record broken.Ticket price ATH of 190.9 DCR and 54.20% stake participation . 
+Another month, another high broken. Ticket price peaked at 190.9 DCR and stake participation at 54.2%.
 
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
@@ -201,7 +201,8 @@ Transactions: In December, Decred users made {n} regular transactions and bought
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
-Nodes: Throughout [December](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1606780800000&to=1609459200000) there was an average of 87 public listening nodes and 200 total nodes per dcr.farm. Average version distribution for December: 27% dcrd v1.5.2, 16% dcrd v1.5.1, 5% dcrd v1.5.0, 3% dcrd v1.5 dev and RC builds, 2.6% dcrd v1.6 dev builds, 0.7% dcrd v1.4, 10% dcrwallet v1.5.1, 1% dcrwallet v1.5, 0.7% dcrwallet v1.4, 34% others.
+Nodes: Throughout [December](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1606780800000&to=1609459200000) there was an average of 87 public listening nodes and 200 total nodes per dcr.farm. Average version distribution for December: 27% dcrd v1.5.2, 21% dcrd v1.6 dev and RC builds, 16% dcrd v1.5.1, 5% dcrd v1.7 dev builds, 5% dcrd v1.5.0, 3% dcrd v1.5 dev and RC builds, 0.7% dcrd v1.4, 10% dcrwallet v1.5.1, 1.3% dcrwallet v1.6 dev and RC builds, 1% dcrwallet v1.5, 0.7% dcrwallet v1.4, 9% others.
+
 { any interesting analysis or events in the network }
 
 ## Integrations
