Network and Market research

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -6,6 +6,8 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 { introduction, major news of the month ordered by impact, don't put any links here }
 
+- { on-chain metrics peaking }
+
 ## Development
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
@@ -184,7 +186,11 @@ Another month, another high broken. Ticket price peaked at 190.9 DCR and stake p
 
 Nodes: Throughout [December](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1606780800000&to=1609459200000) there was an average of 87 public listening nodes and 200 total nodes per dcr.farm. Average version distribution for December: 27% dcrd v1.5.2, 21% dcrd v1.6 dev and RC builds, 16% dcrd v1.5.1, 5% dcrd v1.7 dev builds, 5% dcrd v1.5.0, 3% dcrd v1.5 dev and RC builds, 0.7% dcrd v1.4, 10% dcrwallet v1.5.1, 1.3% dcrwallet v1.6 dev and RC builds, 1% dcrwallet v1.5, 0.7% dcrwallet v1.4, 9% others.
 
-{ any interesting analysis or events in the network }
+@Checkmate reports via [Our Network](https://ournetwork.substack.com/p/our-network-issue-50-part-2) newsletter that a number of on-chain metrics are hitting all time highs.
+
+@PermabullNino reports a ~500K DCR [increase](https://twitter.com/PermabullNino/status/1338497116864438273) in ticket pool balance over the 28-day period.
+
+Mainnet Lightning Network is slowly growing. Throughout 2020 there was an average of 15 nodes, 30 channels and 6 DCR capacity. As of Jan 8 there are 24 nodes, 42 channels and a total capacity of 8.7 DCR according to @jholdstock's [LN map](https://ln-map.jamieholdstock.com/).
 
 ## Integrations
 
@@ -289,7 +295,11 @@ In December DCR was trading between USD 24.01-41.59 / BTC 0.0012-0.002. The aver
 
 With the massive bitcoin runup, Decred has also been raising in USD without losing much ground in BTC value.
 
-{ dcrdex updates, esp. volume }
+During the 48 days of DCRDEX operation it has [traded](https://ournetwork.substack.com/p/our-network-issue-50-part-2) ~600K DCR, which is 30% of Binance volume over the same period. Unlike any centralized exchange though, this volume is much more reliable and harder to cheat.
+
+@Checkmate [announced](https://twitter.com/_Checkmatey_/status/1338418991212052485) the launch of [checkonchain.com](https://checkonchain.com/) with many, many charts:
+
+> Now this is something I have been working on for a very long time. If you want serious edge in this market, pay attention to the beating heart of the chain. A full blown masterclass to learn how to properly apply each metric is coming in hot soon after.
 
 ## Relevant External
 
