Dev old web wallet

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -125,7 +125,7 @@ Note that features added to dcrlibwallet become available for dcrandroid, dcrios
 
 In progress:
 
-- script to [recover](https://github.com/decred/tinydecred/pull/194) funds from an old Copay web wallet's xpriv (extended private key). The script has already helped to recover someone's mainnet funds. { does "web wallet" refer to the one that was at wallet.decred.org? }
+- script to [recover](https://github.com/decred/tinydecred/pull/194) funds from an old Copay web wallet that was at wallet.decred.org. The script has already helped to recover someone's mainnet funds.
 
 **[dcrros](https://github.com/decred/dcrros)**
 
