--- a/journal/202012.md
+++ b/journal/202012.md
@@ -313,11 +313,25 @@ December's top flash loan attack victim was [Warp Finance](https://decrypt.co/52
 
 { governance, funding, chain forks, community splits }
 
+Gitcoin ended a [strong 2020](https://gitcoin.co/blog/gitcoin-year-in-review/) with its 8th round of Ethereum funding seeing a matching pool of $450K, and also the first round of non-Ethereum funding for Zcash projects was [completed](https://electriccoin.co/blog/zcash-gitcoin-grants-round-1-retrospective/), dispensing a $25K matching pool from Zcash Foundation but attracting just 156 donations totalling $2,137. 
+
 { DEX }
 
 { relevant exchanges and websites }
 
+A bill was [introduced](https://www.coindesk.com/us-lawmakers-introduce-bill-that-would-require-stablecoin-issuers-to-obtain-bank-charters) in US Congress that would require stablecoin issuers to obtain bank charters, requiring approval from the Federal Reserve and various other bodies before circulating any coins.
+
+The front line in crypto regulations then [shifted](https://www.coindesk.com/self-hosted-bitcoin-wallets-become-front-line-in-fight-over-crypto-regulations) to "self-hosted wallets" (i.e. any self-custodied crypto) and the degree of due diligence that exchanges are required to carry out on transactions involving these questionable entities.
+
+In an effort to shake off regulators, Facebook's Libra [rebranded](https://www.forbes.com/sites/jasonbrett/2020/12/02/facebooks-libra-renamed-to-diem-prior-to-stablecoin-launch) to Diem and dropped the aspiration of being backed by a basket of currencies in favor of straight USD backing.
+
 { other: regulations, privacy, security, fun }
+
+Ledger's leak of customer data, originally reported in July, has now been [dumped](https://cointelegraph.com/news/ledger-data-leak-a-simple-mistake-exposed-270k-crypto-wallet-buyers) publicly. In the original announcement Ledger stated that more detailed information such as physical address had been accessed for 9.5K customers, but it seems [now](https://www.ledger.com/message-ledgers-ceo-data-leak/) that this information was harvested for 272K customers. 
+
+
+
+
 
 ## Support DJ on the web
 
