Dev add on godcr-gio

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -119,7 +119,7 @@ Note that features added to dcrlibwallet become available for dcrandroid, dcrios
 - UI tweaks
 - bug fixes and optimizations
 
-{ any comment on communication/interaction between godcr <> gio projects? }
+APIs for overlaying widgets is required to fully implement the intended designs for godcr. This was brought to the attention of the Gio team on their Slack and is being treated as a priority.
 
 **[tinydecred](https://github.com/decred/tinydecred)**
 
@@ -346,6 +346,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, lukebp, richardred
-- reviews and feedback: davecgh, JoeGruff
+- reviews and feedback: davecgh, JoeGruff, oshorefueled
 - title image: {}
 - funding: Decred Treasury
