Rel Ext add 2 stories

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -267,6 +267,7 @@ Translations:
 
 Other non-English content:
 
+- "The Decred cryptocurrency increased by 50% and surpassed DeFi coins" ([es.cointelegraph.com](https://es.cointelegraph.com/news/the-decred-cryptocurrency-increased-by-50-and-surpassed-defi-coins))
 - Arabic translation of "Decred: Where did it all begin?" published at [satoshiat.com](https://www.satoshiat.com/2020/12/%d8%a7%d9%84%d8%af%d9%8a%d9%83%d8%b1%d9%8a%d8%af-%d9%85%d9%86-%d8%a3%d9%8a%d9%86-%d8%a8%d8%af%d8%a3%d8%aa%d8%9f/) crypto-focused website.
 
 ## Community Discussions
@@ -320,6 +321,18 @@ Gitcoin ended a [strong 2020](https://gitcoin.co/blog/gitcoin-year-in-review/) w
 A bill was [introduced](https://www.coindesk.com/us-lawmakers-introduce-bill-that-would-require-stablecoin-issuers-to-obtain-bank-charters) in US Congress that would require stablecoin issuers to obtain bank charters, requiring approval from the Federal Reserve and various other bodies before circulating any coins.
 
 The front line in crypto regulations then [shifted](https://www.coindesk.com/self-hosted-bitcoin-wallets-become-front-line-in-fight-over-crypto-regulations) to "self-hosted wallets" (i.e. any self-custodied crypto) and the degree of due diligence that exchanges are required to carry out on transactions involving these questionable entities.
+
+Bittrex delisting privacy coins DASH ZEC XMR:
+
+- https://www.coindesk.com/bittrex-to-delist-privacy-coins-monero-dash-and-zcash
+- also delisted by ShapeShift https://www.coindesk.com/shapeshift-delists-privacy-coin-zcash-over-regulatory-concerns
+
+XRP delisting following the SEC lawsuit:
+
+- https://bittrex.zendesk.com/hc/en-us/articles/360054838991-XRP-Market-Removal-January-15-2021
+- Coinbase too? https://www.financemagnates.com/cryptocurrency/news/bittrex-to-delist-all-xrp-pairs-price-slips-to-0-20/
+- https://decrypt.co/52855/even-bittrex-is-halting-trading-of-xrp
+- this shows that raising funds may backfire years after the ICO and that truly long-term oriented currencies should avoid that
 
 In an effort to shake off regulators, Facebook's Libra [rebranded](https://www.forbes.com/sites/jasonbrett/2020/12/02/facebooks-libra-renamed-to-diem-prior-to-stablecoin-launch) to Diem and dropped the aspiration of being backed by a basket of currencies in favor of straight USD backing.
 
