Media stakey.club

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -240,16 +240,23 @@ Please [submit](https://github.com/decredcommunity/events/blob/master/docs/submi
 
 ## Media
 
-{ notable community efforts }
+@mm completed his 7-part series on blockchain governance:
 
-{ ratings news }
+- [part 1](https://stakey.club/en/blockchain-gov-part1/) introduces cryptocurrencies, money printing and Bitcoin
+- [part 2](https://stakey.club/en/blockchain-gov-part2/) covers the technology behind cryptocurrencies, Proof-of-Work security, incentives and inflation
+- [part 3](https://stakey.club/en/blockchain-gov-part3/) explains basic architecture types (permissionless/permissioned, public/private), Bitcoin governance, privacy and fungibility, and applications of blockchain beyond digital money (esp. e-voting)
+- [part 4](https://stakey.club/en/blockchain-gov-part4/) introduces Decred Project fundamentals (security, consensus, funding, skin in the game) and compares it to pure PoW and PoS approaches
+- [part 5](https://stakey.club/en/blockchain-gov-part5/) assesses blockchain security and governance of Bitcoin vs Decred using @mm's [InvalidationGame](https://github.com/mmartins000/invalidationgame) attack simulator, considering external and internal attacks
+- [part 6](https://stakey.club/en/blockchain-gov-part6/) tests a number of hypotheses against real data (topics include correlation of on-chain metrics with price, voter turnout, OLS model, and more)
+- [part 7](https://stakey.club/en/blockchain-gov-part7/) concludes the series by summarizing simulation results, findings on security, and what Decred can offer to the world
 
-{ hint: use the following format: (title in Sentence case) by (author) ([domain](link)) - (optional comment) }
+> Decred Project not only aims to provide an alternative to financial systems that depend on a trusted third party and to people that depend on the good will of giant financial institutions but also to show how e-voting may happen in a secure and transparent fashion.
+
+Code in Python/R/SQL used in the research is available on [GitHub](https://github.com/mmartins000?tab=repositories).
 
 Selected articles:
 
-- Blockchain governance - part 4 by @mm ([stakey.club](https://stakey.club/en/blockchain-gov-part4/))
-- https://bravenewcoin.com/insights/decred-price-analysis-active-addresses-hit-all-time-highs-as-trend-metrics
+- Decred price analysis - Active addresses hit all-time highs as trend metrics flip bullish by Josh Olszewicz ([bravenewcoin.com](https://bravenewcoin.com/insights/decred-price-analysis-active-addresses-hit-all-time-highs-as-trend-metrics))
 
 Videos:
 
