--- a/journal/202012.md
+++ b/journal/202012.md
@@ -273,12 +273,14 @@ Art/Fun:
 
 Translations:
 
-- {}
+- Arabic translation of "Decred: Where did it all begin?" published at [satoshiat.com](https://www.satoshiat.com/2020/12/%d8%a7%d9%84%d8%af%d9%8a%d9%83%d8%b1%d9%8a%d8%af-%d9%85%d9%86-%d8%a3%d9%8a%d9%86-%d8%a8%d8%af%d8%a3%d8%aa%d8%9f/) crypto-focused website.
+- The general "Utility of cryptoassets" and more technical "Security hardening for digital wallets" and "Verifying digital signatures: Decred" from stakey.club translated to Spanish by @francov\_ (see Spanish [translations](https://github.com/DecredES/traducciones) repo and their [Medium](https://medium.com/decred-es))
+- Decred Journal November 2020 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4), Chinese (@Dominic), and Spanish (@francov\_). Thank you all for spreading Decred news!
+- all known translations are tracked in [this index](https://github.com/decredcommunity/translations/blob/master/index.md) that has 305 items as of writing
 
 Other non-English content:
 
 - "The Decred cryptocurrency increased by 50% and surpassed DeFi coins" ([es.cointelegraph.com](https://es.cointelegraph.com/news/the-decred-cryptocurrency-increased-by-50-and-surpassed-defi-coins))
-- Arabic translation of "Decred: Where did it all begin?" published at [satoshiat.com](https://www.satoshiat.com/2020/12/%d8%a7%d9%84%d8%af%d9%8a%d9%83%d8%b1%d9%8a%d8%af-%d9%85%d9%86-%d8%a3%d9%8a%d9%86-%d8%a8%d8%af%d8%a3%d8%aa%d8%9f/) crypto-focused website.
 
 ## Community Discussions
 
