--- a/journal/202012.md
+++ b/journal/202012.md
@@ -265,7 +265,8 @@ Videos:
 
 Audio:
 
-- {}
+- Rough Consensus 14: Rehashing bull market happenings. @Checkmate and @PermabullNino share their thoughts on Bitcoin ATHs, ETH 2.0, DCR 1.6, and more. ([libsyn](https://roughconsensus.libsyn.com/episode-14-rehashing-bull-market-happenings))
+- Rough Consensus 15: The next paradigm with Mav. Mav from Ready Set Crypto hops on the pod to talk big picture crypto. ([libsyn](https://roughconsensus.libsyn.com/episode-15-the-next-paradigm-with-mav-ready-set-crypto))
 
 Art/Fun:
 
