--- a/journal/202012.md
+++ b/journal/202012.md
@@ -256,12 +256,21 @@ Code in Python/R/SQL used in the research is available on [GitHub](https://githu
 
 Selected articles:
 
-- Decred price analysis - Active addresses hit all-time highs as trend metrics flip bullish by Josh Olszewicz ([bravenewcoin.com](https://bravenewcoin.com/insights/decred-price-analysis-active-addresses-hit-all-time-highs-as-trend-metrics))
+- Decred price analysis - Active addresses hit all-time highs as trend metrics flip bullish by Josh Olszewicz ([bravenewcoin.com](https://bravenewcoin.com/insights/decred-price-analysis-active-addresses-hit-all-time-highs-as-trend-metrics)) - with a [video](https://www.youtube.com/watch?v=oCYZS_qJ7us)
 
 Videos:
 
-- https://youtu.be/3AxBa-EE8RM by @Checkmate
-  - discussion https://www.reddit.com/r/decred/comments/klz8ue/decred_deep_dive_hidden_hydra/
+- Decred bi-Weekly news update - Privacy page revamped, lots of dev updates, 1.6 inbound, and more! by @Exitus ([youtube](https://www.youtube.com/watch?v=-3s9_jMWNuA))
+- New yearly high for Decred by Decred Society ([youtube](https://www.youtube.com/watch?v=qw-ohbTObeo))
+- Decred is ideal for savers by Decred Society ([youtube](https://www.youtube.com/watch?v=zYDT0n59C7k))
+- Decred crypto analysis - King DCR AWAKENS! Every action has an equal and opposite reaction! by DubDigital ([youtube](https://www.youtube.com/watch?v=kqAD_PSgyME))
+- Jake Yocom-Piatt talks Decred and blockchain by Geek Insider ([youtube](https://www.youtube.com/watch?v=mYK_Awn1wTk))
+- How can blockchain can be used in elections? by Jill Malandrino of NASDAQ TradeTalks ([youtube](https://www.youtube.com/watch?v=pBSn_CdQYts)) - with Jake Yocom-Piatt
+- Staked Podcast: Episode 0.0.5 ([youtube](https://www.youtube.com/watch?v=BbBcngzuxCw)) - update on the state of the podcast and an announcement regarding Eduardo and Decred
+- Interview with BTC Uncle (@BTC\_Uncle) by Staked Podcast ([youtube](https://www.youtube.com/watch?v=__7LTz3nQKk), short [clip](https://www.youtube.com/watch?v=3ubS_27FEhE) on why Decred)
+- Interview with Ammar Naseer (@Ammarooni) by Staked Podcast ([youtube](https://www.youtube.com/watch?v=g0bFMuHXrkU))
+- 2020 onchain close out session BTC + DCR by @Checkmate ([youtube](https://www.youtube.com/watch?v=g60ovCl54OA))
+- Decred Deep Dive: Hidden hydra release is incoming! by @Checkmate ([youtube](https://www.youtube.com/watch?v=3AxBa-EE8RM), [discussion](https://www.reddit.com/r/decred/comments/klz8ue/decred_deep_dive_hidden_hydra/))
 
 Audio:
 
@@ -270,7 +279,8 @@ Audio:
 
 Art/Fun:
 
-- {}
+- another [Hidden Hydra](https://twitter.com/New_Copernicus/status/1336044535370092546) teaser by @New\_Copernicus
+- hilarious Decred [GOT cover](https://streamable.com/iam635) by @degeri
 
 Translations:
 
