--- a/journal/202012.md
+++ b/journal/202012.md
@@ -277,10 +277,13 @@ Audio:
 - Rough Consensus 14: Rehashing bull market happenings. @Checkmate and @PermabullNino share their thoughts on Bitcoin ATHs, ETH 2.0, DCR 1.6, and more. ([libsyn](https://roughconsensus.libsyn.com/episode-14-rehashing-bull-market-happenings))
 - Rough Consensus 15: The next paradigm with Mav. Mav from Ready Set Crypto hops on the pod to talk big picture crypto. ([libsyn](https://roughconsensus.libsyn.com/episode-15-the-next-paradigm-with-mav-ready-set-crypto))
 
-Art/Fun:
+Art/fun:
 
 - another [Hidden Hydra](https://twitter.com/New_Copernicus/status/1336044535370092546) teaser by @New\_Copernicus
 - hilarious Decred [GOT cover](https://streamable.com/iam635) by @degeri
+- "They [don't know](https://twitter.com/aithzakaria1/status/1335706207395450880) I have Decred" by @aithzakaria1
+- it's [time](https://twitter.com/aithzakaria1/status/1330999761634258948) for Decred, Ben! by @aithzakaria1
+- survival through adaptation [merch](https://twitter.com/OfficialCryptos/status/1338551937818562561) design by @OfficialCryptos
 
 Translations:
 
@@ -307,7 +310,7 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- {}
+- short [history](https://twitter.com/lefebvre_dustin/status/1333816694922485761) how Decred coded on regardless of the oracles, by @Dustorf
 
 ## Markets
 
