--- a/journal/202012.md
+++ b/journal/202012.md
@@ -227,16 +227,16 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- Dec 3 - [Hablemos Decred 24](https://es.cointelegraph.com/news/next-edition-of-lets-talk-decred-will-focus-on-cryptocurrencies-and-privacy) - Internet. @elian and @pablito discussed how private cryptocurrencies are. ([video](https://www.youtube.com/watch?v=Uv_fnF5M8nk))
+- Dec 3 - [Hablemos Decred 24](https://decredcommunity.github.io/events/index/20201203.1) - Internet. @elian and @pablito discussed how private cryptocurrencies are.
 - Dec 5 - [World Blockchain Conference](https://decredcommunity.github.io/events/index/20201205.1) - Wuhan, China. There was no formal "event" but @Dominic met with old friends at Cobo Wallet, F2Pool and others, to introduce them to the upcoming v1.6 and new consensus rules.
-- Dec 10 - [Hablemos Decred 25](https://es.cointelegraph.com/news/next-episode-of-hablemos-decred-will-review-what-happened-in-2020) - Internet. Most of the Decred in Spanish team reviewed 1 year working in the DAO and discussed plans for the future. ([video](https://www.youtube.com/watch?v=ldddE_mNSM4))
-- Dec 11 - [Cripto Latin Fest Online 2020](https://twitter.com/Criptolatinfest/status/1321588347203162112) - Internet. Co-organized by Paxful. Decred was a VIP sponsor.
+- Dec 10 - [Hablemos Decred 25](https://decredcommunity.github.io/events/index/20201210.1) - Internet. Most of the Decred in Spanish team reviewed 1 year working in the DAO, the good, the bad, the challenges, and what's coming for 2021.
+- Dec 11 - [Cripto Latin Fest Online 2020](https://decredcommunity.github.io/events/index/20201211.1) - Internet. Co-organized by Paxful Latam. Decred was a VIP sponsor. @elian presented common talking points of Decred and the upcoming Hidden Hydra, which got 1.6K views on Facebook and ~800 on YouTube. In another panel he talked about how to prevent crypto scams.
 - Dec 16 - [UAM Xochimilco](https://twitter.com/addcade/status/1338544856344317953) - Mexico City, Mexico. @adcade talked about Decred's organization and Politeia at Aula Multimedia lab of the UAM Xochimilco university. { did it happen? }
-- Dec 18 - [New Year at CR!](https://www.meetup.com/es/Crypto-Resources/events/275173639) - Internet. @elian talked on the panel about DAOs and Decred, organized by Academia Crypto Resources. ([video](https://www.youtube.com/watch?v=OotU-2Yhg1I))
-- Dec 24 - [Decred AMA](https://www.eventbrite.com.ar/e/preguntame-lo-que-sea-sobre-decred-ama-tickets-133772622515) - Internet. @elian participated in Decred AMA organized by OKEx Latam. There was a small DCR giveaway.
-- Dec 30 - [Decred Giveaway 2](https://twitter.com/Decred_ES/status/1344411702989881351) - Internet. [@Decred_ES](https://twitter.com/Decred_ES) ran a small DCR giveaway promo close to the New Year.
+- Dec 18 - [New Year at CR!](https://decredcommunity.github.io/events/index/20201218.1) - Internet. Crypto Resources Academy organized a year-end event and invited partners like Decred, Bitso, Prime XBT DAI, Binance, and others. During the governance panel @elian presented how Decred governance works, the role of Politeia and the decentralization of the Treasury.
+- Dec 24 - [Decred AMA](https://decredcommunity.github.io/events/index/20201224.1) - Internet. This AMA for OKEx in Spanish community took place on their [Telegram](https://t.me/OKExLATAM) with ~500 users. Over 30 questions were asked about Decred's governance, privacy, future developments, history and the DEX. There was also a DCR giveaway ($20 from OKEx and $30 from Decred in Spanish). Over 30 new members joined [@DecredES](https://t.me/DecredES) TG.
+- Dec 30 - [Decred in Spanish New Year Giveaway](https://decredcommunity.github.io/events/index/20201230.1) - Internet. To participate, people needed to join @DecredES Telegram and tell what they like about Decred. Out of 28 commenters, 9 best were selected based on the knowledge and understanding of the project and received 3 DCR in total.
 
-Please [submit](https://github.com/decredcommunity/events/blob/master/docs/submit-index.md) your events to get them listed at our [events tracker](https://decredcommunity.github.io/events/index/).
+Thanks to everyone [submitting](https://github.com/decredcommunity/events/blob/master/docs/submit-index.md) and reviewing events for our [events tracker](https://decredcommunity.github.io/events/index/). This helps to accumulate knowledge about what works and improve reporting.
 
 ## Media
 
@@ -380,6 +380,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, l1ndseymm, lukebp, richardred
-- reviews and feedback: davecgh, JoeGruff, oshorefueled
+- reviews and feedback: davecgh, elian, JoeGruff, oshorefueled
 - title image: {}
 - funding: Decred Treasury
