markets research piece

--- a/journal/202012.md
+++ b/journal/202012.md
@@ -337,6 +337,10 @@ DCR was trading [unusually](https://twitter.com/exitusdcr/status/133987666113167
 
 During the 48 days of DCRDEX operation it has [traded](https://ournetwork.substack.com/p/our-network-issue-50-part-2) ~600K DCR, which is 30% of Binance volume over the same period. Unlike any centralized exchange though, this volume is much more reliable and harder to cheat.
 
+@bochinchero [published](https://twitter.com/TheBochinchero/status/1339202616153284608) his first on-chain analysis piece on Decred, proposing new valuation metrics:
+
+> Staked Realised Value is a metric that is analogous to the Realised Value but applied exclusively to coins circulating within the ticket pool, essentially treating every ticket as a UTXO. \[it\] provides a more accurate valuation of the capital locked into the security and governance of the network. During past sharp sell-offs it has acted as a psychological bottom - the point of maximum pain, where the buyers of last resort step in.
+
 @Checkmate [announced](https://twitter.com/_Checkmatey_/status/1338418991212052485) the launch of [checkonchain.com](https://checkonchain.com/) with many, many (many) charts:
 
 > Now this is something I have been working on for a very long time. If you want serious edge in this market, pay attention to the beating heart of the chain. A full blown masterclass to learn how to properly apply each metric is coming in hot soon after.
